# Robot

./: .gitignore  README.md
Hw/: Robot.ipt  Robot.stl  Strecha.stl  kolo.ipt  kolo.stl
Sw/: CMakeLists.txt
Sw/inc/: C_ADC.h  C_GPIO.h  C_I2C.h  C_MOTORS.h  ad799x.h  km2.h  mcp23017.h
Sw/libs/bpc_prp_opnecv_lib/: CMakeLists.txt
Sw/libs/bpc_prp_opnecv_lib/include/bpc_prp_opencv_lib/: Detection.h  ImageProcessor.h
Sw/libs/bpc_prp_opnecv_lib/src/: ImageProcessor.cpp
Sw/src/: main.cpp
